# pySigma-backend-uberAgent

./: .editorconfig  .gitattributes  .gitignore  LICENSE  README.md  convert-rules.sh  copy-rules.py  pyproject.toml
.devcontainer/: devcontainer.json  post-create.sh
.github/prompts/: update-python.prompt.md
.github/workflows/: release.yml  test.yml
sigma/backends/uberAgent/: __init__.py  rule.py  uberAgent.py  uberagent.py  version.py
sigma/backends/uberagent/: __init__.py  exceptions.py  rule.py  uberagent.py
sigma/pipelines/uberAgent/: __init__.py  uberAgent.py  uberagent.py
sigma/pipelines/uberagent/: __init__.py  category.py  condition.py  field.py  logsource.py  transformation.py  uberagent.py  version.py
tests/: test_backend_uberAgent.py  test_logsource.py  test_pipelines_uberAgent.py  test_rule.py  test_version.py
