[tool.poetry]
name = "pySigma-backend-uberAgent"
version = "0.3.60"
description = "pySigma uAQL backend"
authors = ["vast limits GmbH <info@vastlimits.com>"]
license = "MIT"
repository = "https://github.com/vastlimits/pySigma-backend-uberAgent"
packages = [
    { include = "sigma" }
]

[tool.poetry.dependencies]
python = "^3.8"
pysigma = "^0.10.2"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
coverage = "^7.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
